@@ -7,6 +7,7 @@
     * Can refresh installing state of software items
     * Config.get_login_window_background() return None rather than raise exception
     * Ignore FetchFailedException in apt_update()
+    * Download icon pack using proxy server
 
 2010-07-10 CHEN Yangyang <skabyy@gmail.com>
 
